@@ -2,14 +2,15 @@ package es.tickethub.tickethub.security.jwt;
 
 import java.io.IOException;
 
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.stereotype.Component;
-
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
 
 @Component
 public class UnauthorizedHandlerJwt implements AuthenticationEntryPoint {
@@ -18,9 +19,20 @@ public class UnauthorizedHandlerJwt implements AuthenticationEntryPoint {
 
   @Override
   public void commence(HttpServletRequest request, HttpServletResponse response, AuthenticationException authException)
-      throws IOException {
+      throws IOException, ServletException {
+      
     logger.info("Unauthorized error: {}", authException.getMessage());
 
-    response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "message: %s, path: %s".formatted(authException.getMessage(), request.getServletPath()));
+    response.setContentType("application/json;charset=UTF-8");
+    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+    String jsonResponse = String.format(
+        "{\n" +
+        "  \"status\": \"FAILURE\",\n" +
+        "  \"message\": \"Acceso denegado\",\n" +
+        "  \"data\": \"%s. Path: %s\"\n" +
+        "}", 
+        authException.getMessage(), request.getServletPath()
+    );
+    response.getWriter().write(jsonResponse);
   }
 }
